BoardIndex Layout Fixes
- There were a bunch of layout issues with the BoardIndex that are
resolved in this commit.

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1629,7 +1629,7 @@ ul li.greeting {
 ------------------------------------------------------- */
 .table_list {
 	width: 100%;
-	border-collapse: collapse;
+	border-spacing: 0;
 }
 .table_list .header td {
 	padding: 0;
@@ -1638,7 +1638,7 @@ ul li.greeting {
 	padding: 7px;
 }
 .table_list .header .cat_bar {
-	margin: 0 0 0 -1px;
+	margin: 0;
 }
 .table_list .icon, .table_list .info, .table_list .stats, .table_list.lastpost {
 	border-top: 2px solid #fff;
@@ -1677,8 +1677,8 @@ ul li.greeting {
 	width: 12%;
 }
 .table_list .stats p {
-	border-left: 1px solid #ccc;
-	border-right: 1px solid #ccc;
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #ddd;
 	min-height: 3em;
 	margin: 3px 0 0 0;
 	padding: 0px 7px 0 7px;
@@ -1723,8 +1723,8 @@ ul li.greeting {
 
 /* the posting icons */
 #posting_icons {
-	padding: 0 12px 6px 12px;
-	margin: 0 0 12px 0;
+	padding: 0 12px 6px 0;
+	margin: -6px 0 16px -8px;
 	line-height: 12px;
 	float: left;
 }
@@ -1741,7 +1741,7 @@ ul li.greeting {
 }
 .mark_read {
 	margin: -5px 0 0 0;
-	padding: 0 6px;
+	padding: 0;
 	float: right;
 }
 .mark_read .buttonlist ul {
